Make same spacing fix for fullscreen

--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ nav {
 }
 
 #app.fullscreen .content {
-  padding-top: 70px;
+  padding-top: 79px;
 }
 
 #app, nav, .container {
